--- a/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Dottor.BlazorNet9.csproj
+++ b/WPC.Dottor.BlazorNet9/WPC.Dottor.BlazorNet9/Dottor.BlazorNet9.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WPC.Dottor.BlazorNet9.Client\WPC.Dottor.BlazorNet9.Client.csproj" />
+    <ProjectReference Include="..\WPC.Dottor.BlazorNet9.Client\Dottor.BlazorNet9.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.0" />
